Include/CSS/stylesheet.css
html {
    background-color:black;
    color:white;
}

body {
    background-color:black;
}

#messages {
    border:1px dashed white;
    padding:5px;
}

header {
    background-color:#eee;
    color:black;
}

header > h3 {
    margin-top:-10px;
    padding:10px 50px;
}

.ChatWindows {
    width:99%;
    margin:auto;
    position:relative;
}

.ChatWindows > .overlayDiv {
    position:absolute;
    left:0px;
    top:0px;
    width:100%;
    height:100%;
    background-color:rgba(0,0,0,0.25);
    z-index:1;
}

.ChatWindows > .overlayDiv > .overlayMessageBox {
    position:absolute;
    top:50%;
    left:50%;
    transform: translateY(-50%) translateX(-50%);
    background-color:#eee;
    border-radius:5px;
    padding:25px;
    display:none;
}

.ChatWindows > .overlayDiv > .overlayMessageBox > h3 {
    text-align:center;
}

.ChatWindows > .overlayDiv > .overlayMessageBox > p {
    text-align:center;
    font-size:0.85em;
}

#connectedOverlay {
    width:500px;
    height:150px;
}

.WindowContainer {
    background-color:black;
    color:white;
    padding:5px;
}

.WindowContainer > div {
    background-color:#323232;
    color:white;
    padding:15px;
}

.Window {
    background-color:#eee;
    color:black;
    margin:15px;
    height:500px;
    border-radius:5px;
    position:relative;
}

#MessageHistoryList {
    /*background-color:black;*/
    position:absolute;
    top:0px;
    left:0px;
    width:100%;
    padding:25px 10px;
    height:calc(100% - 54px);
    color:black;
}

#MessageHistoryList:before {
    position:absolute;
    top:5px;
    left:5px;
    content:"Message History";
    color:black;
    font-size:0.65em;
}

.InputForm {
    position:absolute;
    bottom:0px;
    left:0px;
    width:100%;
    height:54px;
}

.InputForm > input {
    width:calc(100% - 54px);
    height:100%;
    padding:25px;
    background-color:white;
}

.InputForm > button {
    height:54px;
    width:54px;
    background-color:white;
    position:absolute;
    right:0%;
    bottom:0%;
}

#ParticipantsList {
    position:absolute;
    top:0px;
    left:0px;
    width:100%;
    padding:25px 10px;
    height:100%;
    color:black;
    overflow-y:auto;
}

#ParticipantsList:before {
    position:absolute;
    top:5px;
    left:5px;
    content:"Simple Minds Thinking";
    color:black;
    font-size:0.65em;
}

#ActiveChannelsList {
    position:absolute;
    top:0px;
    padding:25px 10px;
    left:0px;
    width:100%;
    height:calc(100% - 54px);
    color:black;
    overflow-y:auto;
}

#ActiveChannelsList:before {
    position:absolute;
    top:5px;
    left:5px;
    content:"Classes In Session";
    color:black;
    font-size:0.65em;
}

footer {
    background-color:black;
    padding:25px;
    margin-top:25px;
    color:#eee;
    font-size:0.9em;
}

footer > a {
    color: #83B5E0;
}

footer > a:hover {
    color:cyan;
}

ul.speciallist {
    list-style:none;
    padding:0;
}

ul.speciallist > li {
    height:30px;
    position:relative;
    border:1px solid rgba(0, 0, 0, 0.17);
}

ul.speciallist > li:not(:nth-child(2n)) {
    background-color:gainsboro;
}

ul.speciallist > li > span {
    height:30px;
    padding:5px;
    font-size:1.25em;
    line-height:30px;
}

ul.speciallist > li > span > .largeText{
    letter-spacing:1px;
    font-size:1em;
}

ul.speciallist > li > span > .mediumText{
    font-size:0.85em;
}

ul.speciallist > li > span > .smallText{
    font-size:0.55em;
    margin-right:40px;
    float:right;
}

ul.speciallist > li > button {
    height:30px;
    width:30px;
    position:absolute;
    right:0px;
    top:0px;
}

form .fa {
    font-size:1.75m;
    margin-top:5px;
}

.errormessage {
    display:none;
    color:red;
    text-align:center;
    font-size:0.85em;
}

